// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditTicketField/> should render a loader 1`] = `
<Loader
  inline={false}
  minHeight="500px"
  size="40px"
/>
`;

exports[`<EditTicketField/> should render an info alert and the edit form because it is a "Contact reason" managed ticket field 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/ticket-fields/active"
          >
            Ticket fields
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Contact reason
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <div
      className="contentWrapper"
    >
      <Alert
        className="mb-4"
        icon={true}
        type="info"
      >
        Use this field to gain actionable insights into customer inquiry trends.
         
        This field is powered by AI and can automatically be filled by Gorgias, 
        <a
          href="https://docs.gorgias.com/en-US/273001-a7d86899ce5f4aef81ebbaa301d78b58"
          rel="noopener noreferrer"
          target="_blank"
        >
          see this article
        </a>
        .
      </Alert>
      <EditFieldForm
        field={
          {
            "created_datetime": "2022-01-02T03:04:05.123456+00:00",
            "deactivated_datetime": null,
            "definition": {
              "data_type": "text",
              "input_settings": {
                "input_type": "input",
                "placeholder": "Some placeholder",
              },
            },
            "description": "This is a managed input field",
            "id": 123,
            "label": "Contact reason",
            "managed_type": "contact_reason",
            "object_type": "Ticket",
            "priority": 1,
            "required": false,
            "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
          }
        }
      />
    </div>
  </Container>
</div>
`;

exports[`<EditTicketField/> should render no info alert and the edit form because it is not a managed ticket field 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/ticket-fields/active"
          >
            Ticket fields
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          Input field
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <div
      className="contentWrapper"
    >
      <EditFieldForm
        field={
          {
            "created_datetime": "2022-01-02T03:04:05.123456+00:00",
            "deactivated_datetime": null,
            "definition": {
              "data_type": "text",
              "input_settings": {
                "input_type": "input",
                "placeholder": "Some placeholder",
              },
            },
            "description": "This is an input field",
            "id": 123,
            "label": "Input field",
            "managed_type": null,
            "object_type": "Ticket",
            "priority": 1,
            "required": false,
            "updated_datetime": "2022-01-02T03:04:05.123456+00:00",
          }
        }
      />
    </div>
  </Container>
</div>
`;
